@@ -1,6 +1,13 @@
 2009-01-20  Stefan Kost  <ensonic@users.sf.net>
 
 	* TODO:
+	* gtkdoc-mkdb.in:
+	* tests/gobject/src/gobject.c:
+	  We could add the language as a comment, it is not shown in the final output.
+
+2009-01-20  Stefan Kost  <ensonic@users.sf.net>
+
+	* TODO:
 	  More ideas.
 
 	* gtkdoc-fixxref.in:
